Changelog
=========

11.4-dev0 - (unreleased)
---------------------------

11.3 - (2020-09-18)
---------------------------
* Change: use Type for photoALbumEntryType first then portal_type when setting
  photoAlbumEntryType
  [ichim-david refs #117296]

11.2 - (2020-06-26)
---------------------------
* Feature: added draft or archived info within photoAlbumEntry
  [ichim-david refs #117295]
* Feature: added photoAlbumEntryType info to related albums for mini header
  condition
  [ichim-david refs #117296]

11.1 - (2020-06-22)
---------------------------
* Change: hide relation information within an accordion and display expired or
  non published ribbon on photoAlbumEntry entries
  [ichim-david refs #112068]

11.0 - (2020-02-12)
---------------------------
* Change: Refs #113376 ensure interface content type is read before a portal type content type
  [ichim-david]

10.9 - (2020-01-10)
--------------------------
* Feature: added ability to display a message to logged in users and still
  show a related title with body for anonymous users in case no relations are
  added for a given possible relation
  [ichim-david refs #112068]

10.8 - (2019-08-19)
--------------------------
* Change: eea_relatedItems relatedItems macro album view now adds background
  image instead of image tag if image_thumb is not passed as thumb_scale variable
  [ichim-david refs #106884]

10.7 - (2019-01-28)
--------------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]

10.6 - (2018-08-27)
--------------------------
* Change: Get base-url from body data `base-url`
  [avoinea refs #97843]

10.5 - (2018-06-20)
--------------------------
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

10.4 - (2018-05-30)
--------------------------
* Bug fix: Restrict getBRefs only to related items
  [avoinea refs #95796]

10.3 - (2018-04-17)
-------------------
* Change: removed green gradient from jquery ui
  [ichim-david refs #91590]
