@@ -29,7 +29,15 @@ class IToolAccessor(Interface):
         """ Returns defined content types. If proxy=True returns catalog brains
         """
 
-class IBaseObject(IATBaseObject):
+# class IBaseObject(IATBaseObject):
+#     """ Interface to be used for generic relations as Archetypes.IBaseObject
+#     is blacklisted in Products.CMFPlone.CatalogTool.BLACKLISTED_INTERFACES
+#     More details about this issue on:
+#     https://svn.eionet.europa.eu/projects/Zope/ticket/4908
+#     """
+
+# results in dexterity errors if based on IATBaseObject
+class IBaseObject(Interface):
     """ Interface to be used for generic relations as Archetypes.IBaseObject
     is blacklisted in Products.CMFPlone.CatalogTool.BLACKLISTED_INTERFACES
 
